# ai-file-sorter-iconic

./: .gitignore  AI_ALTERNATIVES.md  AI_PROMPTS_BY_IMPLEMENTATION_ORDER.md  ALL_CHANGES_PLAIN_TEXT.txt  ANALYSIS_SUMMARY.txt  ANSWER_TO_QUESTION.md  ARTIFACT_TESTING_GUIDE.md  BUGFIXING_GUIDE.md  BUGFIXING_SUMMARY.md  BUGFIX_SESSION_2026-01-05.md  BUG_ANALYSIS_REPORT.md  BUG_FIXES_SUMMARY.md  BUG_FIXING_RESULTS.md  BUG_PREVENTION_IMPLEMENTATION.md  CHANGELOG.md  CI_FAILURE_INVESTIGATION.md  CODESPACES_IMPLEMENTATION_GUIDE.md  COMPLETE_REFORKING_GUIDE.md  COMPREHENSIVE_CHANGES_IWANT_FORMAT.md  CUSTOM_FEATURES.md  DIAGNOSTIC_REPORT.md  DIAGNOSTIC_TOOLS_COMPARISON.md  DIAGNOSTIC_TOOL_V2.1_IMPROVEMENTS.md  ENHANCED_ERROR_HANDLING.md  ERROR_REPORTER_GUIDE.md  FEATURES_QUICK_SUMMARY.md  FEATURE_IMPLEMENTATION_COMPLETE.md  FEATURE_IMPLEMENTATION_REQUESTS.md  FILE_TINDER_BUG_FIXES.md  FILE_TINDER_IMPLEMENTATION_SUMMARY.md  FRAMEWORK_ANALYSIS.md  FUTURE_IMPROVEMENTS.md  GEMINI_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_FINAL_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROMPTS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MANUAL_TESTING_GUIDE.md  (+50 more)
.github/workflows/: build.yml  build_newstuff_windows.yml  get_my_exe.yml
app/: CMakeLists.txt  build_windows.ps1  diagnose_startup.cpp  main.cpp  startapp_linux.cpp  startapp_windows.cpp  vcpkg.json
app/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
app/_codeql_build_dir/.qt/: QtDeploySupport.cmake
app/_codeql_build_dir/.rcc/: app_resources.qrc  qrc_app_resources.cpp
app/_codeql_build_dir/aifilesorter_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
app/_codeql_build_dir/aifilesorter_autogen/6YEA5652QU/: moc_CacheManagerDialog.cpp  moc_CategorySuggestionWizard.cpp  moc_FolderLearningDialog.cpp  moc_UserCategorizationDialog.cpp  moc_UserProfileDialog.cpp  moc_WhitelistTreeEditor.cpp
app/_codeql_build_dir/llama-build/: Makefile  cmake_install.cmake  llama-config.cmake  llama-version.cmake  llama.pc
app/_codeql_build_dir/llama-build/ggml/: Makefile  cmake_install.cmake  ggml-config.cmake
app/_codeql_build_dir/llama-build/ggml/src/: Makefile  cmake_install.cmake
app/_codeql_build_dir/llama-build/ggml/src/ggml-base_autogen/: deps  moc_predefs.h
app/_codeql_build_dir/llama-build/ggml/src/ggml-cpu/: Makefile  cmake_install.cmake
app/_codeql_build_dir/llama-build/ggml/src/ggml-cpu_autogen/: deps  moc_predefs.h
app/_codeql_build_dir/llama-build/ggml/src/ggml_autogen/: deps  moc_predefs.h
app/_codeql_build_dir/llama-build/src/: Makefile  cmake_install.cmake
app/_codeql_build_dir/llama-build/src/llama_autogen/: deps  moc_predefs.h
app/include/: AIErrorResolver.hpp  APIUsageTracker.hpp  AnalysisOrchestrator.hpp  CacheManagerDialog.hpp  CategorizationRepository.hpp  CategorizationService.hpp  CategorySuggestionWizard.hpp  ConfigSchema.hpp  DatabaseManager.hpp  DialogUtils.hpp  DllVersionChecker.hpp  ErrorCode.hpp  ErrorMessages.hpp  ErrorReporter.hpp  ErrorResolutionDialog.hpp  FileExplorerManager.hpp  FileTinderDialog.hpp  GeminiClient.hpp  InputValidator.hpp  LLMClient.hpp  LLMSelectionDialog.hpp  LLMService.hpp  MainApp.hpp  MainAppUiBuilder.hpp  MovableCategorizedFile.hpp  Result.hpp  Settings.hpp  StringUtils.hpp  Types.hpp  UiTranslator.hpp  UsageStatsDialog.hpp  Utils.hpp  WhitelistStore.hpp  WhitelistTreeEditor.hpp  ui_constants.hpp
app/launcher/: CMakeLists.txt  main_launcher.cpp
app/lib/: AIErrorResolver.cpp  APIUsageTracker.cpp  CacheManagerDialog.cpp  CategorizationDialog.cpp  CategorizationProgressDialog.cpp  CategorizationService.cpp  CategorySuggestionWizard.cpp  ConsistencyPassService.cpp  CustomLLMDialog.cpp  DatabaseManager.cpp  DialogUtils.cpp  DllVersionChecker.cpp  DryRunPreviewDialog.cpp  ErrorHandler.cpp  ErrorReporter.cpp  ErrorResolutionDialog.cpp  FileExplorerManager.cpp  FileTinderDialog.cpp  FolderLearningDialog.cpp  GeminiClient.cpp  InputValidator.cpp  LLMClient.cpp  LLMClient.cpp.broken_backup  LLMDownloader.cpp  LLMSelectionDialog.cpp  LLMService.cpp  LocalLLMClient.cpp  Logger.cpp  MainApp.cpp  MainAppHelpActions.cpp  MainAppUiBuilder.cpp  MovableCategorizedFile.cpp  Settings.cpp  StartupErrorDialog.cpp  TranslationManager.cpp  UiTranslator.cpp  UndoManager.cpp  Updater.cpp  UsageStatsDialog.cpp  UserProfileDialog.cpp  (+4 more)
app/scripts/: build_llama_windows.ps1  build_tui.sh
app/tui/: CMakeLists.txt  TuiApp.cpp  TuiApp.hpp  TuiCategorizationProgress.cpp  TuiCategorizationProgress.hpp  TuiCategorizationResults.cpp  TuiCategorizationResults.hpp  TuiFileTinder.cpp  TuiFileTinder.hpp  TuiLLMSelection.cpp  TuiLLMSelection.hpp  TuiSettings.cpp  TuiSettings.hpp  TuiWhitelistManager.cpp  TuiWhitelistManager.hpp  main_tui.cpp
tests/: bug_prevention_tests.sh  safety_checks.sh
tests/unit/: test_input_validator.cpp  test_result.cpp  test_ui_translator.cpp
